--- a/.env.test
+++ b/.env.test
@@ -5,4 +5,4 @@ SYMFONY_DEPRECATIONS_HELPER=999999
 PANTHER_APP_ENV=panther
 PANTHER_ERROR_SCREENSHOT_DIR=./var/error-screenshots
 DATABASE_URL="mysql://root:root@db:3306/functionaltests?serverVersion=8.0&charset=utf8mb4"
-TPAY_API_URL=http://192.168.48.1:8090 #something wrong with my network :D
+TPAY_API_URL=http://wiremock:8090
